--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-flask==2.0.1
-requests==2.25.1
-numpy==1.21.0
-pip freeze > requirements.txt
+yt-dlp==2024.12.6
+pyaudioop
+# Add other required packages here, for example:
+flask==2.1.1
+numpy==1.22.0
+requests==2.26.0
