--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Install yt-dlp (latest or a specific working version)
-yt-dlp  # Remove version to get the latest
+yt-dlp==2023.12.23
 # Other required packages:
 flask==2.1.1
 numpy==1.22.0
